# data-structures

./: .gitignore  .travis.yml  Dockerfile  Gemfile  README.md  data-structures.cabal  package.json  test.sh
array-list/c/: array-list.c
array-list/scheme/: array-list-test.rkt  array-list.rkt
binary-tree/ruby/: tree.rb  tree_spec.rb
bit-array/ruby/: bit_array.rb
circular-buffer/ruby/: buffer.rb
doubly-linked-list/javascript/: dllist.js
lib/array-list/: array-list.rkt  array_list.c  array_list.h
lib/array-stack/: array_stack.c  array_stack.h  array_stack.js  array_stack.rb
lib/binary-tree/: binary-tree.rkt  binary_tree.c  binary_tree.h  binary_tree.js  binary_tree.rb
lib/bit-array/: bit_array.rb
lib/circular-buffer/: circular_buffer.c  circular_buffer.h  circular_buffer.rb
lib/doubly-linked-list/: doubly_linked_list.js  doubly_linked_list.rb
lib/heap/: heap.c  heap.rb
lib/linked-list/: linked_list.c  linked_list.js  linked_list.rb
lib/mtf-linked-list/: mtf_linked_list.rb
lib/multiset/: multiset.rb
lib/queue/: Queue.hs  queue.rb  queue.rkt
lib/stack/: Stack.hs  stack.c  stack.h  stack.js  stack.rb  stack.rkt
lib/threaded-binary-tree/: threaded_binary_tree.c  threaded_binary_tree.h
lib/trie/: trie.rb  trie.rkt
lib/unrolled-linked-list/: unrolled_linked_list.rb
linked-list/c/: a.out  list.c
linked-list/javascript/: list.js
linked-list/ruby/: list.rb
mtf-self-organizing-linked-list/ruby/: mtf_list.rb
queue/ruby/: queue.rb
red-black-tree/ruby/: red_black_tree.rb
spec/array-list/: array-list-spec.rkt  array-list-test.rkt  (+2 more)
(+31 files in other folders)
