name:                data-structures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/data-structures#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stack, Queue
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite data-structures-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , data-structures
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/data-structures
